implemented phase 6
